@@ -5756,3 +5756,13 @@ M       vbm_vol_eidist.c
 
 ------------------------------------------------------------------------
 r635 | dahnke | 2014-10-22 14:18:44
+
+M       CHANGES.txt
+M       vbm12.fig
+M       vbm12.m
+M       vbm_tst_pre.m
+M       vbm_vol_atlas.m
+
+(1)  Added VBM12 header figure in VBM12 GUI.
+------------------------------------------------------------------------
+r636 | dahnke | 2014-10-23 08:27:34
